bindings/c/include/taffy.h

typedef enum TaffyReturnCode {
  // Operation suceeded
  TAFFY_RETURN_CODE_OK,
  // The style pointer passed was null
  TAFFY_RETURN_CODE_NULL_STYLE_POINTER,
  // The tree pointer passed was null
  TAFFY_RETURN_CODE_NULL_TREE_POINTER,
  // The node referenced by the node id passed does not exist
  TAFFY_RETURN_CODE_INVALID_NODE_ID,
  // An enum value was specified that was outside the range of valid value for this enum
  TAFFY_RETURN_CODE_INVALID_ENUM_VALUE,
  // A Points unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_NONE,
  // A Points unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_POINTS,
  // A Percent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_PERCENT,
  // A MinContent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_MIN_CONTENT,
  // A MaxContent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_MAX_CONTENT,
  // A FitContentPx unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_FIT_CONTENT_PX,
  // A FitContentPercent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_FIT_CONTENT_PERCENT,
  // An Auto unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_AUTO,
  // An Fr unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_FR,
  // A NaN value was specified but is not valid in this context
  TAFFY_RETURN_CODE_UNEXPECTED_NA_N,
  // A infinite value was specified but is not valid in this context
  TAFFY_RETURN_CODE_UNEXPECTED_INFINITY,
  // A negative value was specified but is not valid in this context
  TAFFY_RETURN_CODE_UNEXPECTED_NEGATIVE,
} TaffyReturnCode;
// Controls whether flex items are forced onto one line or can wrap onto multiple lines.
//
// Defaults to [`FlexWrap::NoWrap`]
//
// [Specification](https://www.w3.org/TR/css-flexbox-1/#flex-wrap-property)
typedef enum TaffyFlexWrap {
  // Items will not wrap and stay on a single line
  TAFFY_FLEX_WRAP_NO_WRAP,
  // Items will wrap according to this item's [`FlexDirection`]
  TAFFY_FLEX_WRAP_WRAP,
  // Items will wrap in the opposite direction to this item's [`FlexDirection`]
  TAFFY_FLEX_WRAP_WRAP_REVERSE,
} TaffyFlexWrap;
// Controls whether grid items are placed row-wise or column-wise. And whether the sparse or dense packing algorithm is used.
//
// The "dense" packing algorithm attempts to fill in holes earlier in the grid, if smaller items come up later.
// This may cause items to appear out-of-order, when doing so would fill in holes left by larger items.
//
// Defaults to [`GridAutoFlow::Row`]
//
// [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/grid-auto-flow)
typedef enum TaffyGridAutoFlow {
  // Items are placed by filling each row in turn, adding new rows as necessary
  TAFFY_GRID_AUTO_FLOW_ROW,
  // Items are placed by filling each column in turn, adding new columns as necessary.
  TAFFY_GRID_AUTO_FLOW_COLUMN,
  // Combines `Row` with the dense packing algorithm.
  TAFFY_GRID_AUTO_FLOW_ROW_DENSE,
  // Combines `Column` with the dense packing algorithm.
  TAFFY_GRID_AUTO_FLOW_COLUMN_DENSE,
} TaffyGridAutoFlow;
typedef enum TaffyUnit {
  // A none value (used to unset optional fields)
  TAFFY_UNIT_NONE,
  // Fixed Length (pixel) value
  TAFFY_UNIT_LENGTH,
  // Percentage value
  TAFFY_UNIT_PERCENT,
  // Min-content size
  TAFFY_UNIT_MIN_CONTENT,
  // Max-content size
  TAFFY_UNIT_MAX_CONTENT,
  // fit-content() function with a pixel limit
  TAFFY_UNIT_FIT_CONTENT_PX,
  // fit-content() function with a percentage limit
  TAFFY_UNIT_FIT_CONTENT_PERCENT,
  // Automatic values
  TAFFY_UNIT_AUTO,
  // fr unit
  TAFFY_UNIT_FR,
} TaffyUnit;
typedef struct TaffyStyle TaffyStyle;
typedef const struct TaffyStyle *TaffyStyleConstRef;
typedef struct TaffyStyle *TaffyStyleMutRef;
typedef struct TaffyDimension {
  // The value. If the unit is variant that doesn't require a value (e.g. Auto) then the value is ignored.
  float value;
  enum TaffyUnit unit;
} TaffyDimension;
enum TaffyReturnCode TaffyStyle_SetFlexWrap(TaffyStyleMutRef raw_style, enum TaffyFlexWrap value);
enum TaffyGridAutoFlow TaffyStyle_GetGridAutoFlow(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetGridAutoFlow(TaffyStyleMutRef raw_style, enum TaffyGridAutoFlow value);
struct TaffyDimension TaffyStyle_GetWidth(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetWidth(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetHeight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetHeight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMinWidth(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMinWidth(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMinHeight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMinHeight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMaxWidth(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMaxWidth(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMaxHeight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMaxHeight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetInsetTop(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetInsetTop(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetInsetBottom(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetInsetBottom(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetInsetLeft(TaffyStyleConstRef raw_style);
struct TaffyDimension TaffyStyle_GetInsetRight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetInsetLeft(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
enum TaffyReturnCode TaffyStyle_SetInsetRight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMarginTop(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMarginTop(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMarginBottom(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMarginBottom(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetMarginLeft(TaffyStyleConstRef raw_style);
struct TaffyDimension TaffyStyle_GetMarginRight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetMarginLeft(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
enum TaffyReturnCode TaffyStyle_SetMarginRight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetPaddingTop(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetPaddingTop(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetPaddingBottom(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetPaddingBottom(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetPaddingLeft(TaffyStyleConstRef raw_style);
struct TaffyDimension TaffyStyle_GetPaddingRight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetPaddingLeft(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
enum TaffyReturnCode TaffyStyle_SetPaddingRight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetBorderTop(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetBorderTop(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetBorderBottom(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetBorderBottom(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetBorderLeft(TaffyStyleConstRef raw_style);
struct TaffyDimension TaffyStyle_GetBorderRight(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetBorderLeft(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
enum TaffyReturnCode TaffyStyle_SetBorderRight(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetColumnGap(TaffyStyleConstRef raw_style);