bindings/csharp/include/NativeMethods.g.cs


        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetFlexWrap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetFlexWrap(TaffyStyle* _raw_style, TaffyFlexWrap _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetGridAutoFlow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyGridAutoFlow TaffyStyle_GetGridAutoFlow(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetGridAutoFlow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetGridAutoFlow(TaffyStyle* _raw_style, TaffyGridAutoFlow _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetWidth(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetWidth(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetHeight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetHeight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMinWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMinWidth(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMinWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMinWidth(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMinHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMinHeight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMinHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMinHeight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMaxWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMaxWidth(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMaxWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMaxWidth(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMaxHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMaxHeight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMaxHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMaxHeight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetInsetTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetInsetTop(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetInsetTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetInsetTop(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetInsetBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetInsetBottom(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetInsetBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetInsetBottom(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetInsetLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetInsetLeft(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetInsetLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetInsetLeft(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetInsetRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetInsetRight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetInsetRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetInsetRight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMarginTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMarginTop(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMarginTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMarginTop(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMarginBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMarginBottom(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMarginBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMarginBottom(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMarginLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMarginLeft(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMarginLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMarginLeft(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetMarginRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetMarginRight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetMarginRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetMarginRight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetPaddingTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetPaddingTop(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetPaddingTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetPaddingTop(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetPaddingBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetPaddingBottom(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetPaddingBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetPaddingBottom(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetPaddingLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetPaddingLeft(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetPaddingLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetPaddingLeft(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetPaddingRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetPaddingRight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetPaddingRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetPaddingRight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetBorderTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetBorderTop(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetBorderTop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetBorderTop(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetBorderBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetBorderBottom(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetBorderBottom", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetBorderBottom(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetBorderLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetBorderLeft(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetBorderLeft", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetBorderLeft(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetBorderRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetBorderRight(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetBorderRight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetBorderRight(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetColumnGap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetColumnGap(TaffyStyle* _raw_style);
